# git-forge-release-migrator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CNAME  Dockerfile  LICENSE  README.md  README.pt-BR.md  TRADEMARKS.md  index.html  intro.html  package-lock.json  package.json  pyproject.toml  release.config.cjs  setup.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CODEOWNERS  copilot-instructions.md  copilot-review-instructions.md  dependabot.yml  prompts
.husky/: commit-msg  pre-commit  pre-push
commands/: demo.html  migrate.html  resume.html  settings.html  setup.html  smoke.html
configuration/: artifacts-and-sessions.html  http-and-runtime.html  runtime-events.html  settings-profiles.html  tokens-and-auth.html
dart_cli/: README.md  analysis_options.yaml  pubspec.yaml
docs/: LICENSE  USAGE.md  USAGE.pt-BR.md
getting-started/: first-migration.html  install-and-verify.html  quick-start.html
gui/: README.md  analysis_options.yaml  pubspec.yaml
guides/: bitbucket-behavior.html  common-migrations.html  macos-release-artifacts.html  resume-and-retry.html  smoke-testing.html
project/: changelog.html  ci-and-release.html  development.html
pt-BR/: 404.html  index.html  intro.html  sitemap.xml
reference/: environment-aliases.html  exit-codes.html  file-locations.html  support-matrix.html
scripts/: check-translations.js  check-translations.mjs  fvm-global.js  github-api.mjs  install-hooks.sh  package-coverage-html.js  publish-pr-review.mjs  publish-pr-review.test.mjs  (+7 more)
(+721 files in other folders)
